# telemetry_streamer_odom

./: 1_chatgpt.md  2_UDP根据XML实现配置读取发送.md  3_UDP添加Imu话题示例.md  CMakeLists.txt  package.xml
config/: streams.xml
include/telemetry_streamer_odom/: config.hpp  field_kind_dispatch.hpp  field_resolver.hpp  imu_fields.hpp  odom_fields.hpp  protocol.hpp  telemetry_streamer_node.hpp  topic_extractors.hpp  topic_registry.hpp
src/: config.cpp  field_kind_dispatch.cpp  field_resolver.cpp  main.cpp  telemetry_streamer_node.cpp  topic_extractors.cpp  topic_registry.cpp
